Revert back to using css grid for aligning text, looks like a font rendering issue on mac chrome

--- a/src/styles/base/_default.scss
+++ b/src/styles/base/_default.scss
@@ -64,6 +64,10 @@ label {
 }
 
 .custom-checkbox-container {
+  display: grid;
+  grid-template-columns: 25px auto;
+  align-items: center;
+
   input {
     width: 25px;
     height: 25px;
@@ -72,7 +76,6 @@ label {
     appearance: none;
     border: 2px solid $grey_000;
     outline: none;
-    float: left;
 
     &:checked {
       background: url(../../assets/images/tick.png) no-repeat center center
@@ -94,7 +97,5 @@ label {
     margin-left: 10px;
     cursor: pointer;
     line-height: 1;
-    margin-top: 4px;
-    float: left;
   }
 }
